--- a/srv/sesrv/.config/systemd/user/sesrv-sync-tmpfs.service
+++ b/srv/sesrv/.config/systemd/user/sesrv-sync-tmpfs.service
@@ -22,8 +22,8 @@ After=srv-sesrv-tmpfs.mount
 Type=oneshot
 RemainAfterExit=true
 ExecStartPre=/usr/bin/mkdir -p /srv/sesrv/tmpfs/drive_c/Games/SpaceEngineersDedicated/DedicatedServer64
-ExecStart=/usr/bin/rsync -aAXv --info=progress2 /srv/isrsrv/server/ /srv/isrsrv/tmpfs
-ExecStop=/usr/bin/rsync -aAXv --info=progress2 /srv/isrsrv/tmpfs/ /srv/isrsrv/server
+ExecStart=/usr/bin/rsync -aAX --info=progress2 /srv/isrsrv/server/ /srv/isrsrv/tmpfs
+ExecStop=/usr/bin/rsync -aAX --info=progress2 /srv/isrsrv/tmpfs/ /srv/isrsrv/server
 
 [Install]
 WantedBy=default.target
