--- a/sesrv-sync-tmpfs.service
+++ b/sesrv-sync-tmpfs.service
@@ -17,13 +17,19 @@
 [Unit]
 Description=SeSrv TmpFs sync
 After=srv-sesrv-tmpfs.mount
+StartLimitBurst=3
+StartLimitIntervalSec=300
+StartLimitAction=none
 
 [Service]
 Type=oneshot
 RemainAfterExit=true
-ExecStartPre=/usr/bin/mkdir -p /srv/sesrv/tmpfs/drive_c/Games/SpaceEngineersDedicated/DedicatedServer64
-ExecStart=/usr/bin/rsync -aAX --info=progress2 /srv/isrsrv/server/ /srv/isrsrv/tmpfs
-ExecStop=/usr/bin/rsync -aAX --info=progress2 /srv/isrsrv/tmpfs/ /srv/isrsrv/server
+ExecStart=/usr/bin/sesrv-script initial-sync start
+ExecStop=/usr/bin/sesrv-script initial-sync stop
+TimeoutStartSec=infinity
+TimeoutStopSec=120
+RestartSec=10
+Restart=on-failure
 
 [Install]
 WantedBy=default.target
