--- a/sesrv-tmpfs@.service
+++ b/sesrv-tmpfs@.service
@@ -34,6 +34,8 @@ ExecStart=/usr/bin/tmux -f /tmp/%u-%i-tmux.conf -L %u-%i-tmux.sock new-session -
 ExecStartPost=/usr/bin/sesrv-script post-start %i
 ExecStop=/usr/bin/sesrv-script pre-stop %i
 ExecStop=/usr/bin/tmux -L %u-%i-tmux.sock send-keys -t SeSrv.0 C-c
+ExecStop=/usr/bin/sleep 10
+ExecStop=/usr/bin/tmux -L %u-%i-tmux.sock send-keys -t SeSrv.0 ENTER
 ExecStopPost=/usr/bin/sesrv-script post-stop %i tmpfs
 TimeoutStartSec=infinity
 TimeoutStopSec=120
