Updated Debian package, updated wine vcrun to 2019, wiki update

--- a/DEBIAN/control
+++ b/DEBIAN/control
@@ -1,6 +1,6 @@
 Package: sesrv-script
-Version: 1.7-4
-Architecture: amd64
+Version: 1.7-5
+Architecture: all
 Essential: no
 Priority: optional
 Depends: bash, coreutils, sudo, libpam-systemd, grep, sed, gawk, curl, rsync, wget, findutils, tmux, zip, unzip, p7zip, postfix, s-nail, cabextract, xvfb, steamcmd, winehq-staging (<= 7.1)
